# bmstu-commi-genetics-haste

./: Main.hs  Main.html  Main.js  README.md  bmstu-commi-genetics-haste.cabal  bmstu-commi-genetics-haste.sublime-project
Commi/: Application.hs  Config.hs  Genetic.hs  Matrix.hs  Plot.hs  Task.hs  Util.hs
Genetic/: Coroutine.hs  Individ.hs  Options.hs  Population.hs  Solve.hs  State.hs
HasteExt/: Random.hs
